force-app/main/default/objects/BET_Registration_Details__c/BET_Registration_Details__c.object-meta.xml
<CustomObject>
    <label>BDD Registration Details</label>
    <nameField>
        <displayFormat>RD-{0000}</displayFormat>
        <label>Registration Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BDD Registration Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>