force-app/main/default/objects/BET_Registration_Details__c/fields/BDD_Form__c.field-meta.xml
<CustomField>
    <fullName>BDD_Form__c</fullName>
    <label>BDD Form</label>
    <referenceTo>BET_BDD_Form__c</referenceTo>
    <relationshipLabel>Registration Details</relationshipLabel>
    <relationshipName>BDD_Registration_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>