force-app/main/default/objects/BET_Registration_Details__c/fields/Registration_ID__c.field-meta.xml
<CustomField>
    <fullName>Registration_ID__c</fullName>
    <label>Registration ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>