force-app/main/default/objects/BET_Registration_Details__c/fields/Registration_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_ID_Type__c</fullName>
    <label>Registration ID Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACER Code</fullName>
            </value>
            <value>
                <fullName>EIC</fullName>
            </value>
            <value>
                <fullName>ISIN</fullName>
            </value>
            <value>
                <fullName>LEI</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Registration Number</fullName>
            </value>
            <value>
                <fullName>Regulator ID</fullName>
            </value>
            <value>
                <fullName>Tax ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>