force-app/main/default/objects/BET_Registration_Details__c/fields/Registration_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Registration_Type_Other__c</fullName>
    <label>Registration Type Other</label>
    <length>150</length>
    <type>Text</type>
</CustomField>